# starter-tauri

./: .gitignore  Cargo.toml  README.md  components.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.vue  index.css  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  default.json5  desktop.json  monitor.json  pin.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  lib.rs  main.rs
src-tauri/src/core/: device.rs  event.rs  eye_dropper.rs  mod.rs  pick_color.rs  pin.rs  ruler.rs  shortcut.rs  store.rs  tray.rs
src-tauri/src/utils/: mod.rs  monitor.rs  path.rs  url.rs  window.rs
src/components/: AppSidebar.vue  NavMain.vue  NavProjects.vue  TeamSwitcher.vue
src/composables/: useDisposable.ts  useDocumentFocus.ts  useRegister.ts  useTauriListen.ts  useTauriMousePosition.ts  useWebviewWindowInitialSize.ts
src/lib/: sizeConstraints.ts  utils.ts
src/pages/: index.vue  preference.vue
src/pages/eye-dropper/: index.vue
src/pages/pick_color/: index.vue  util.ts
src/pages/pin/: context_menu.vue  index.vue
src/pages/pin/composables/: useContextMenuItems.ts  useContextmenu.ts  useImgSize.ts
src/pages/preference/components/: Sidebar.vue
src/pages/preference/shortcuts/: index.vue
src/pages/ruler/: [type].vue
src/pages/ruler/components/: Ruler.vue
src/pages/shot/: index.vue
src/pages/shot/components/: FabricCanvas.vue
src/pages/shot/components/toolbar/: Toolbar.vue  useTools.ts
src/pages/shot/components/toolbar/tools/: ArrowTool.ts  ClearTool.ts  EllipseTool.ts  PenTool.ts  PolygonTool.ts  RectangleTool.ts  SelectTool.ts  SimpleTool.ts  TextTool.ts  Tool.ts
src/pages/shot/composables/: useFabric.ts
vite-plugins/: placeholder-replace.ts
