[workspace]
resolver = "2"
members = [ "src-tauri" ]

[workspace.dependencies]
tauri = "2"
serde = "1"
serde_json = "1"
log = ">=0.4, <1"
tauri-plugin = { version = "2", features = [ "build" ] }
# tauri-plugin-qz-demo = { path = "./src-tauri/src/plugins/demo" }
cocoa = "0.26.1"
# tauri-plugin-shell = "2"
# tauri-plugin-fs-pro = "2"
# tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
