[package]
name = "starter-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_demo_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [ "config-json5" ] }

[dependencies]
tauri = { workspace = true, features = [
  "protocol-asset",
  "macos-private-api",
  "config-json5",
  "image-png",
] }
tauri-plugin-opener = "2"
tauri-plugin-log = { version = "2", features = [ "colored" ] }
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-clipboard = "2.1.11"
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
xcap = "0.6.2"
log = "0.4.27"
rdev = "0.5.3"
base64 = "0.22.1"
device_query = "4.0.1"
url = "2.5.4"
reqwest = { version = "0.12.22", features = [ "blocking" ] }
rand = "0.9.2"
glob = "0.3.2"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = [
  "derive",
  "typescript"
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { workspace = true }
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
